--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "dotenv": "^8.0.0",
+    "firebase": "^6.3.3",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
